@@ -1,3 +1,15 @@
+2003-11-19  Adam Fedor  <fedor@gnu.org>
+
+	* Source/x11/XGServer.m: Add some docs.
+
+	* Window focus fixes.
+	* Source/x11/XGServerEvent.m ([XGServer -processEvent:event]): Move
+	take focus code...
+	([XGServer -_handleTakeFocusAtom:forContext:]):  ...to here. Check for
+	common problems before passing event to frontend.
+	([XGServer -processEvent:event])(FocusOut): Invalidate current
+	focus window and focus request.
+
 2003-11-18 16:57  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/art/ftfont.m: Remove fallback ivar. Add advancementImgd
